--- a/app/src/main/res/layout/activity_expense_form.xml
+++ b/app/src/main/res/layout/activity_expense_form.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools" >
+    <data>
+        <variable name="evmForm"
+                type="io.kustard.expenses.viewmodel.ExpenseViewModel"/>
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingHorizontal="@dimen/activity_horizontal_margin"
         tools:context=".view.ExpenseForm">
+
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/title"
@@ -18,6 +28,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{evmForm.getTitle()}"
                 android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -32,6 +43,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{evmForm.getDate().toString()}"
                 android:inputType="date"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,6 +58,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{evmForm.getProject()}"
                 android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,6 +73,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{evmForm.getDescription()}"
                 android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,6 +88,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{Integer.toString(evmForm.getAmount()) }"
                 android:inputType="number"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,5 +104,7 @@
             app:layout_constraintCircleRadius="@dimen/form_top_spacing"
             app:layout_constraintTop_toBottomOf="@+id/amount"/>
 
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
